# mcp-server-2

./: .gitignore  devices.csv  kube-python.md  kubeconfig.yml  kubernetes_clusters.json  netmiko-guide.md
examples/: README.md  client.py  simple_client.py  sse_client.py
mcp_network_manager/: .env.example  Dockerfile  README.md  README_SERVER.md  devices.csv  docker-compose.yml  mcp_salt.key  pyproject.toml  requirements.txt  start_server.sh
mcp_network_manager/examples/: README.md  client.py  connect_test.py  manage_passwords.py  migrate_passwords.py  robust_client.py  web_client.html
mcp_network_manager/mcp_network_manager/: __init__.py  __main__.py  device_manager.py  kubernetes_manager.py  models.py  prompt_manager.py  security_utils.py  server.py
